--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -63,8 +63,11 @@
     <!-- This footer should be hidden by default and shown when there are todos -->
     <footer class="footer">
       <!-- This should be `0 items left` by default -->
-      <span class="todo-count"
+      <span *ngIf="tasks().length > 1; else oneTask" class="todo-count"
         ><strong>{{ tasks().length }}</strong> items</span
+      >
+      <ng-template #oneTask
+        ><span class="todo-count"><strong>1</strong> item</span></ng-template
       >
       <!-- Remove this if you don't implement routing -->
       <ul class="filters">
