--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -53,4 +53,13 @@
     Soy alvaro y soy mayor de 18
   </div>
   <ng-template #elseBlock>Soy alvaro y soy menor de 18</ng-template>
+  <hr />
+  <input type="text" [value]="person().name" (change)="changeName($event)" />
+  <div [ngSwitch]="person().name">
+    <p *ngSwitchCase="'alvaro'">yo soy alvaro</p>
+    <p *ngSwitchCase="'julian'">yo soy julian</p>
+    <p *ngSwitchCase="'ana'">yo soy ana</p>
+    <p *ngSwitchCase="'milagro'">yo soy milagro</p>
+    <p *ngSwitchDefault>yo no soy nadie</p>
+  </div>
 </div>
