--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -62,4 +62,7 @@
     <p *ngSwitchCase="'milagro'">yo soy milagro</p>
     <p *ngSwitchDefault>yo no soy nadie</p>
   </div>
+  <hr />
+  <input type="color" [formControl]="colorCtrl" />
+  <p>color: {{ colorCtrl.value }}</p>
 </div>
