--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -48,11 +48,20 @@
   <hr />
   <div *ngIf="1 !== 1">My content</div>
   <div *ngIf="name() === 'alvaro'">Soy alvaro</div>
+  @if (name()==='alvaro'){
+  <div>Soy alvaro 2</div>
+  }
   <input type="number" [value]="person().age" (change)="changeAge($event)" />
   <div *ngIf="person().name === 'alvaro' && person().age > 18; else elseBlock">
     Soy alvaro y soy mayor de 18
   </div>
   <ng-template #elseBlock>Soy alvaro y soy menor de 18</ng-template>
+  <h2>If else new</h2>
+  @if (person().name === 'alvaro' && person().age > 18){
+  <div>Soy alvaro y soy mayor de 18</div>
+  }@else{
+  <div>Soy alvaro y soy menor de 18</div>
+  }
   <hr />
   <input type="text" [value]="person().name" (change)="changeName($event)" />
   <div [ngSwitch]="person().name">
