--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -99,4 +99,37 @@
     </span>
   </p>
   <p><input type="text" /></p>
+  <hr />
+  <h2>New for</h2>
+  <ul>
+    <p>total: {{ tasks().length }}</p>
+    <li *ngFor="let task of tasks(); index as i">{{ i }} {{ task }}</li>
+  </ul>
+  <ul>
+    @for(task of tasks();track task; let i=$index){
+    <li>{{ i }} {{ task }}</li>
+    }@empty {
+    <li><strong>la lista esta en vacio</strong></li>
+    }
+  </ul>
+  <hr />
+  <h2>New Switch</h2>
+  <div [ngSwitch]="person().name">
+    <p *ngSwitchCase="'alvaro'">yo soy alvaro</p>
+    <p *ngSwitchCase="'julian'">yo soy julian</p>
+    <p *ngSwitchCase="'ana'">yo soy ana</p>
+    <p *ngSwitchCase="'milagro'">yo soy milagro</p>
+    <p *ngSwitchDefault>yo no soy nadie</p>
+  </div>
+  <div>
+    @switch (person().name) { @case('nicolas'){
+    <p>yo soy nicolas</p>
+    } @case('julian'){
+    <p>yo soy julian</p>
+    } @case('ana'){
+    <p>yo soy ana</p>
+    } @default {
+    <p>yo no soy nadie</p>
+    } }
+  </div>
 </div>
