--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -2,7 +2,9 @@
   <h1>Hola este es mi primer proyecto</h1>
   <h2>{{ welcome }}</h2>
   <ul>
-    <li *ngFor="let task of tasks()">{{ task }}</li>
+    @for (task of tasks(); track task) {
+    <li>{{ task }}</li>
+    }
   </ul>
   <hr />
   <h2>{{ "Hola".repeat(4) }}</h2>
@@ -39,23 +41,26 @@
   <hr />
   <ul>
     <p>total: {{ tasks().length }}</p>
-    <li *ngFor="let task of tasks(); index as i">{{ i }} {{ task }}</li>
+    @for (task of tasks(); track task; let i = $index) {
+    <li>{{ i }} {{ task }}</li>
+    }
   </ul>
   <h1>Signals</h1>
   <input type="text" [value]="name()" (change)="changeHandler($event)" />
   <p>name: {{ name() }}</p>
   <p>name: {{ name() }}</p>
   <hr />
-  <div *ngIf="1 !== 1">My content</div>
-  <div *ngIf="name() === 'alvaro'">Soy alvaro</div>
-  @if (name()==='alvaro'){
+  @if (1 !== 1) {
+  <div>My content</div>
+  } @if (name() === 'alvaro') {
+  <div>Soy alvaro</div>
+  } @if (name()==='alvaro'){
   <div>Soy alvaro 2</div>
   }
   <input type="number" [value]="person().age" (change)="changeAge($event)" />
-  <div *ngIf="person().name === 'alvaro' && person().age > 18; else elseBlock">
-    Soy alvaro y soy mayor de 18
-  </div>
-  <ng-template #elseBlock>Soy alvaro y soy menor de 18</ng-template>
+  @if (person().name === 'alvaro' && person().age > 18) {
+  <div>Soy alvaro y soy mayor de 18</div>
+  } @else { Soy alvaro y soy menor de 18 }
   <h2>If else new</h2>
   @if (person().name === 'alvaro' && person().age > 18){
   <div>Soy alvaro y soy mayor de 18</div>
@@ -64,12 +69,18 @@
   }
   <hr />
   <input type="text" [value]="person().name" (change)="changeName($event)" />
-  <div [ngSwitch]="person().name">
-    <p *ngSwitchCase="'alvaro'">yo soy alvaro</p>
-    <p *ngSwitchCase="'julian'">yo soy julian</p>
-    <p *ngSwitchCase="'ana'">yo soy ana</p>
-    <p *ngSwitchCase="'milagro'">yo soy milagro</p>
-    <p *ngSwitchDefault>yo no soy nadie</p>
+  <div>
+    @switch (person().name) { @case ('alvaro') {
+    <p>yo soy alvaro</p>
+    } @case ('julian') {
+    <p>yo soy julian</p>
+    } @case ('ana') {
+    <p>yo soy ana</p>
+    } @case ('milagro') {
+    <p>yo soy milagro</p>
+    } @default {
+    <p>yo no soy nadie</p>
+    } }
   </div>
   <hr />
   <input type="color" [formControl]="colorCtrl" />
@@ -103,7 +114,9 @@
   <h2>New for</h2>
   <ul>
     <p>total: {{ tasks().length }}</p>
-    <li *ngFor="let task of tasks(); index as i">{{ i }} {{ task }}</li>
+    @for (task of tasks(); track task; let i = $index) {
+    <li>{{ i }} {{ task }}</li>
+    }
   </ul>
   <ul>
     @for(task of tasks();track task; let i=$index){
@@ -114,12 +127,18 @@
   </ul>
   <hr />
   <h2>New Switch</h2>
-  <div [ngSwitch]="person().name">
-    <p *ngSwitchCase="'alvaro'">yo soy alvaro</p>
-    <p *ngSwitchCase="'julian'">yo soy julian</p>
-    <p *ngSwitchCase="'ana'">yo soy ana</p>
-    <p *ngSwitchCase="'milagro'">yo soy milagro</p>
-    <p *ngSwitchDefault>yo no soy nadie</p>
+  <div>
+    @switch (person().name) { @case ('alvaro') {
+    <p>yo soy alvaro</p>
+    } @case ('julian') {
+    <p>yo soy julian</p>
+    } @case ('ana') {
+    <p>yo soy ana</p>
+    } @case ('milagro') {
+    <p>yo soy milagro</p>
+    } @default {
+    <p>yo no soy nadie</p>
+    } }
   </div>
   <div>
     @switch (person().name) { @case('nicolas'){
